created connection block

--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,20 @@
       </div>
 
     </header>
+    <main class="main">
+      <section class="connection">
+        <video autoplay muted loop>
+          <source src="../src/images/1112873_Monitor_Using_3840x2160.mp4" type="video/mp4">
+      </video>
+        <div class="connection-button_container">
+          <button class="connection-button">
+            <span class="connection-button_text">Связаться с нами</span>
+            <span class="connection-button_arrow"></span>
+            </button>
+          <span class="connection-button_container-white"></span>
+        </div>
+      </section>
+      </main>
     <!-- <main>
         <section class="connection">
           <div class="connection_title_container">
