--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,10 @@
               <a href="#0" class="goods_link">Товары</a>
             </li>
             <li class="services_container">
-              <a href="#0">Услуги</a>
+              <a href="#0" class="services_link">Услуги</a>
             </li>
             <li class="company_container">
-              <a href="#0">Компания</a>
+              <a href="#0" class="company_link">Компания</a>
             </li>
           </ul>
           <ul class="header-dark_navigation">
@@ -34,7 +34,7 @@
               <button type="bid">Оставить заявку</button>
             </li>
             <li class="contact_container">
-              <a class="contact_link">Контакты</a>
+              <a href="#0" class="contact_link">Контакты</a>
             </li>
             <li class="search_container">
               <button type="search"></button>
@@ -46,16 +46,13 @@
               <a href="#0"></a>
             </li>
           </ul>
-
         </nav>
-        
       </div>
-
       <div class="header-light">
         <nav class="header-light-menu">
           <ul class="header-light_list">
-            <li><a>Флотомашины и чаны</a></li>
-            <li><a>Автоматизация</a></li>
+            <li><a href="#0" class="list_link">Флотомашины и чаны</a></li>
+            <li><a href="#0" class="list_link">Автоматизация</a></li>
             <li><button type="sn">Sn</button></li>
           </ul>
         </nav>
@@ -65,7 +62,7 @@
     <main class="main">
       <section class="connection">
         <video autoplay muted loop>
-          <source src="../src/images/1112873_Monitor_Using_3840x2160.mp4" type="video/mp4">
+          <source src="../src/images/connection_video.mp4" type="video/mp4">
       </video>
         <div class="connection-button_container">
           <button class="connection-button">
