added main layout

--- a/public/index.html
+++ b/public/index.html
@@ -63,95 +63,203 @@
       <section class="connection">
         <video autoplay muted loop>
           <source src="../src/images/connection_video.mp4" type="video/mp4">
-      </video>
+        </video>
         <div class="connection-button_container">
           <button class="connection-button">
             <span class="connection-button_text">Связаться с нами</span>
             <span class="connection-button_arrow"></span>
-            </button>
+          </button>
           <span class="connection-button_container-white"></span>
         </div>
       </section>
-      </main>
-    <!-- <main>
-        <section class="connection">
-          <div class="connection_title_container">
-            <h2 class="connection_title">Здесь нужно вставить Видео</h2>
-          </div>
-
-          <div class="connection_button_container">
-            <button class="connection_button">
-              <span class="connection_button_text">Связаться с нами</span>
+      <section class="info">
+        <div class="info_header">
+          <h2 class="info_header-title">
+            <span class="title-red">Lorem Ipsum,</span>
+            <span class="title-brown">LOREM IPSUM<span> LOREM IPSUM</span></span>
+          </h2>
+          <hr class="gold-line">
+          <p class="gold-text">
+            Lorem Ipsum компании разработано с учётом анализа передовых технологий, использованием лучших решений и их
+            качественной модернизации под потребности конкретного заказчика. Успешная реализация проектов на ведущих
+            предприятиях горно-обогатительной промышленности базируется на многолетнем опыте и высоких компетенциях
+            наших сотрудников.
+          </p>
+        </div>
+        <div class="info_content-one">
+          <div class="first-container">
+            <button class="info_content-button">
+              <span class="info_content-button_text">Подробнее</span>
+              <span class="info_content-button_arrow"></span>
             </button>
           </div>
-        </section>
-
-        <section class="main-block">
-          <h3>Lorem Ipsum, LOREM IPSUM LOREM IPSUM</h3>
-          <p>
-            Lorem Ipsum компании разработано с учётом анализа передовых
-            технологий, использованием лучших решений и их качественной
-            модернизации под потребности конкретного заказчика. Успешная
-            реализация проектов на ведущих предприятиях горно-обогатительной
-            промышленности базируется на многолетнем опыте и высоких
-            компетенциях наших сотрудников.
-          </p>
-          <article>
-            <h3>Lorem Ipsum</h3>
-            <p>
-              Есть много вариантов Lorem Ipsum, но большинство из них имеет не
-              всегда приемлемые модификации, например, юмористические вставки
-              или слова, которые даже отдалённо не напоминают латынь. Если вам
-              нужен Lorem Ipsum для серьёзного проекта, вы наверняка не хотите
-              какой-нибудь шутки, скрытой в середине абзаца. Также все другие
-              известные генераторы Lorem Ipsum используют один и тот же текст,
-              который они просто повторяют, пока не достигнут нужный объём. Это
-              делает предлагаемый здесь генератор единственным настоящим Lorem
-              Ipsum генератором. Он использует словарь из более чем 200
-              латинских слов, а также набор моделей предложений. В результате
-              сгенерированный Lorem Ipsum выглядит правдоподобно, не имеет
-              повторяющихся абзацей или "невозможных" слов.
+          <div class="second_container">
+            <h3 class="info_content-title">Lorem Ipsum</h3>
+            <p class="info_content-text">Есть много вариантов Lorem Ipsum, но большинство из них имеет не всегда
+              приемлемые модификации, например,
+              юмористические вставки или слова, которые даже отдалённо не напоминают латынь. Если вам нужен Lorem Ipsum
+              для серьёзного проекта, вы наверняка не хотите какой-нибудь шутки, скрытой в середине абзаца. Также все
+              другие известные генераторы Lorem Ipsum используют один и тот же текст, который они просто повторяют, пока
+              не достигнут нужный объём. Это делает предлагаемый здесь генератор единственным настоящим Lorem Ipsum
+              генератором. Он использует словарь из более чем 200 латинских слов, а также набор моделей предложений. В
+              результате сгенерированный Lorem Ipsum выглядит правдоподобно, не имеет повторяющихся абзацей или
+              "невозможных" слов.</p>
+          </div>
+        </div>
+        <div class="info_content-two">
+          <div class="third_container">
+            <h3 class="info_content-title">Lorem Ipsum</h3>
+            <p class="info_content-text">
+              Есть много вариантов Lorem Ipsum, но большинство из них имеет не всегда приемлемые модификации, например,
+              юмористические вставки или слова, которые даже отдалённо не напоминают латынь. Если вам нужен Lorem Ipsum
+              для серьёзного проекта, вы наверняка не хотите какой-нибудь шутки, скрытой в середине абзаца. Также все
+              другие известные генераторы Lorem Ipsum используют один и тот же текст, который они просто повторяют, пока
+              не достигнут нужный объём. Это делает предлагаемый здесь генератор единственным настоящим Lorem Ipsum
+              генератором. Он использует словарь из более чем 200 латинских слов, а также набор моделей предложений. В
+              результате сгенерированный Lorem Ipsum выглядит правдоподобно, не имеет повторяющихся абзацей или
+              "невозможных" слов.
             </p>
-            <button>подробнее</button>
-          </article>
-          <article>
-            <h3>Lorem Ipsum</h3>
-            <p>
-              Есть много вариантов Lorem Ipsum, но большинство из них имеет не
-              всегда приемлемые модификации, например, юмористические вставки
-              или слова, которые даже отдалённо не напоминают латынь. Если вам
-              нужен Lorem Ipsum для серьёзного проекта, вы наверняка не хотите
-              какой-нибудь шутки, скрытой в середине абзаца. Также все другие
-              известные генераторы Lorem Ipsum используют один и тот же текст,
-              который они просто повторяют, пока не достигнут нужный объём. Это
-              делает предлагаемый здесь генератор единственным настоящим Lorem
-              Ipsum генератором. Он использует словарь из более чем 200
-              латинских слов, а также набор моделей предложений. В результате
-              сгенерированный Lorem Ipsum выглядит правдоподобно, не имеет
-              повторяющихся абзацей или "невозможных" слов.
-            </p>
-            <button>подробнее</button>
-          </article>
-        </section>
-
-        <section class="sn-block">
-          <h3>SN</h3>
-          <p>
-            Помогает повысить извлечение за счет поддержания оптимальных
-            дозировок реагентов в ключевых точках процесса
+          </div>
+          <div class="fourth_container">
+            <button class="info_content-button">
+              <span class="info_content-button_text">Подробнее</span>
+              <span class="info_content-button_arrow"></span>
+            </button>
+          </div>
+        </div>
+      </section>
+      <section class="sn">
+        <div class="sn-content">
+          <h2 class="sn-title">Sn</h2>
+          <p class="sn-text">Помогает повысить извлечение за счет
+            поддержания оптимальных дозировок реагентов в ключевых
+            точках процесса
           </p>
-          <button>подробнее</button>
-        </section>
+        </div>
+        <div class="sn-button_container">
+          <button class="sn-button">
+            <span class="sn-button_text">Подробнее</span>
+            <span class="sn-button_arrow"></span>
+          </button>
+          <span class="sn-button_container-white"></span>
+        </div>
+      </section>
+      <section class="order">
+        <div class="order-content">
+          <h2 class="order-title">Мы реализуем под ключ проекты любой сложности</h2>
+          <button class="order-button">
+            <span class="order-button_text">Оставить заявку</span>
+            <span class="order-button_arrow"></span>
+          </button>
+        </div>
+      </section>
+    </main>
 
-        <section class="order-block">
-          <h3>Мы реализуем под ключ проекты любой сложности</h3>
-          <button>Оставить заявку</button>
-        </section>
-      </main>
+    <footer class="footer">
+      <span class="footer-line"></span>
+      <div class="footer-content">
+        <div class="footer-info_container">
+          <section class="goods-section">
+            <h3 class="section-title">Товары</h3>
+            <span class="section-line"></span>
+            <div class="section">
+              <h4 class="title">Флотомашины и чаны</h4>
+              <ul class="list">
+                <li><a>МП</a></li>
+                <li><a>ЧП</a></li>
+                <li><a>ЧКЭ</a></li>
+                <li><a>Нестандартное Lorem Ipsum</a></li>
+              </ul>
+            </div>
 
-      <footer class="footer"></footer>
+            <div class="section">
+              <h4 class="title">Автоматизация</h4>
+              <ul class="list">
+                <li style="color:  rgba(49, 19, 17, 1)"><a>Локальные АСУ</a></li>
+                <li><a>РУВ</a></li>
+                <li><a>SD</a></li>
+                <li><a>SC</a></li>
+                <li><a>SK</a></li>
+                <li><a>SP</a></li>
+              </ul>
+              <ul class="list">
+                <li style="color: rgba(49, 19, 17, 1);"><a>АСУТП</a></li>
+              </ul>
+            </div>
 
-      <div class="popup popup_type_update-contact popup_is-animated">
+            <div>
+              <ul class="list">
+                <li style="color: rgba(49, 19, 17, 1)"><a>Интеллектуальные системы</a></li>
+                <li><button class="section-button">SN</button></li>
+                <li><a>SV</a></li>
+                <li><a>SP</a></li>
+              </ul>
+            </div>
+          </section>
+          <section class="services-section">
+            <h3 class="section-title">Услуги</h3>
+            <span class="section-line"></span>
+
+            <div class="section">
+              <ul class="list" style="margin-left: -14px;">
+                <li>Технологические исследования и аудит</li>
+                <li>Проектирование</li>
+                <li>Строительно-монтажные работы</li>
+              </ul>
+            </div>
+
+            <div>
+              <h4 class="title">Сервисное сопровождение</h4>
+              <ul class="list">
+                <li>Сервис</li>
+                <li>Технологическая поддержка</li>
+              </ul>
+            </div>
+          </section>
+          <section class="company-section">
+            <h3 class="section-title">Компании</h3>
+            <span class="section-line"></span>
+            <div class="section">
+              <ul class="list" style="margin-left: -14px;">
+                <li>Новости и события</li>
+                <li>Проекты</li>
+                <li>Карьера</li>
+                <li>Отзывы заказчиков</li>
+                <li>Документы</li>
+              </ul>
+            </div>
+            <div>
+              <h4 class="title">Контакты</h4>
+            </div>
+          </section>
+        </div>
+        <div class="footer-address_container">
+          <span class="address_geotag"></span>
+          <address class="address_content">
+            <div class="address_text">
+              <p>г. Санкт-Петербург, 119186, Большой проспект Васильевского острова, дом 7. Литера З</p>
+            </div>
+            <div class="address_contacts">
+              <a class="address_phone" href="+7 (---) 5-5-05-11">
+                +7 (---) 5-5-05-11
+              </a>
+              <a class="address_email" href="info@info.ru">
+                info@info.ru
+              </a>
+            </div>
+            <div class="address_button">
+              <button class="order-button">
+                <span class="order-button_text">Оставить заявку</span>
+                <span class="order-button_arrow"></span>
+              </button>
+            </div>
+          </address>
+        </div>
+      </div>
+    </footer>
+    <!--
+    
+    <div class="popup popup_type_update-contact popup_is-animated">
         <div class="popup__content">
           <button type="button" class="popup__close"></button>
           <p class="popup__title">
