--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
     </header>
     <main class="main">
       <section class="connection">
+        <h1 class="connection-title">Lorem Ipsum Lorem Ipsum</h1>
         <video autoplay muted loop>
           <source src="../src/images/connection_video.mp4" type="video/mp4">
         </video>
