--- a/public/index.html
+++ b/public/index.html
@@ -232,7 +232,7 @@
                 </ul>
               </div>
 
-              <div>
+              <div class="section">
                 <h4 class="title">Сервисное сопровождение</h4>
                 <ul class="section__link-list">
                   <li><a href="#0">Сервис</a></li>
