--- a/public/index.html
+++ b/public/index.html
@@ -349,7 +349,9 @@
 
             </div>
             <div class="popup__action">
-                <span class="popup__rule">Отправляя эту форму, я принимаю<a class="popup__link">политику конфиденциальности</a>этого сайта.</span>
+                <span class="popup__rule">Отправляя эту форму, я принимаю
+                  <a class="popup__link">политику конфиденциальности</a>этого сайта.
+                </span>
 
                 <button type="submit" name="button" class="button popup__button">
                   Сохранить
